--- a/.github/workflows/t4m-live.yaml
+++ b/.github/workflows/t4m-live.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
+        uses: aws-actions/configure-aws-credentials@3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -22,16 +22,16 @@ jobs:
 
       - name: Terraform fmt
         run: terraform fmt -check 
-        working-directory: ${{ github.workspace }}
+        continue-on-error: false
 
       - name: Terraform init
         run: terraform init
-        working-directory: ${{ github.workspace }}
+        
 
       - name: Terraform plan
         run: terraform plan
-        working-directory: ${{ github.workspace }}
+        
 
       - name: Terraform apply
         run: terraform apply -auto-approve
-        working-directory: ${{ github.workspace }}
+        
